syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.funstuff.secretcodes";

service SecretCodesServer {
  rpc encode(EncodeRequest ) returns (EncodeResponse);
  rpc decode(DecodeRequest ) returns (DecodeResponse);
}

enum Code {
  UNKNOWN = 0;
  SWAP_ENDS = 1;
  PIG_LATIN = 2;
}

message EncodeRequest {
  string message = 1;
  repeated Code code = 2;
}

message EncodeResponse {
  string message = 1;
}


message DecodeRequest {
  string message = 1;
  repeated Code code = 2;
}

message DecodeResponse {
  /* For some codes there may be multiple possible decodings */
  repeated string message = 1;
}

